# MercuryEngine

./: .gitignore  Cargo.toml
Docs/: Global_Illumination_Spec.md
Docs/lume/: Architecture_Overview.md  Project_Structure.md  Virtual_Geometry_Spec.md
Docs/lumelite/: Architecture_Overview.md  Backend_Agnostic_Analysis.md  Backend_Switch.md  Current_Status.md  Depth_Investigation.md  Development_Roadmap.md  Flax_Lighting_Analysis.md  Interface_Compatibility.md  PBR_Model_Viewer_Plan.md  Project_Structure.md  README.md  Render_API_Coordination.md
debug/: Cargo.toml
lume/: Cargo.toml
lume/lume-bridge/: Cargo.toml
lume/lume-bridge/src/: extract.rs  lib.rs  plugin.rs
lume/lume-examples/: Cargo.toml
lume/lume-renderer/: Cargo.toml
lume/lume-renderer/src/: lib.rs
lume/lume-renderer/src/gi/: mod.rs
lume/lume-renderer/src/graph/: mod.rs
lume/lume-renderer/src/virtual_geom/: mod.rs
lume/lume-rhi/: Cargo.toml
lume/lume-rhi/src/: lib.rs
lume/lume-rhi/src/vulkan/: buffer.rs  descriptor.rs  memory.rs  mod.rs  queue.rs  render_pass.rs  sampler.rs  swapchain.rs  texture.rs
lume/lume-rhi/src/vulkan/pipeline/: compute.rs  graphics.rs  mod.rs
lume/lume-tools/: Cargo.toml
lume/lume-tools/src/: cluster.rs  lib.rs  sdf.rs
lumelite/: Cargo.toml
lumelite/lumelite-bridge/: Cargo.toml
lumelite/lumelite-bridge/src/: lib.rs  plugin.rs  window_backend.rs
lumelite/lumelite-renderer/: Cargo.toml
lumelite/lumelite-renderer/shaders/: direct_triangle.wgsl  gbuffer.wgsl  lights.wgsl  present.wgsl  shadow.wgsl
lumelite/lumelite-renderer/src/: config.rs  direct_triangle.rs  lib.rs
lumelite/lumelite-renderer/src/gbuffer/: mod.rs
lumelite/lumelite-renderer/src/gi/: mod.rs
lumelite/lumelite-renderer/src/graph/: mod.rs
lumelite/lumelite-renderer/src/light_pass/: mod.rs
lumelite/lumelite-renderer/src/present/: mod.rs
lumelite/lumelite-renderer/src/resources/: mod.rs
lumelite/lumelite-renderer/src/shadows/: mod.rs
lumelite/lumelite-renderer/src/virtual_geom/: mod.rs
render-api/: Cargo.toml
render-api/src/: backend.rs  extract.rs  lib.rs
